初步完成数据双向绑定

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title></title>
 </head>
 <body>
+	<div id="app"><p>{{a}}<span>{{b.c}}{{asd.fsdf.sd}}</span></p></div>
+	<div id="test">XXXYYYZZZ</div>
 	<script src="due.js"></script>
 </body>
 </html>
